MODAL: fixed problem with gif not showing when the filepath or url are dynamically added to the component on the page inside the JSX - Instead, used conditional rendering to render the entire <img> JSX tag with the hard-coded file paths specific to each project using a conditional to check the project title matches a hard-coded title ONLY FOR EXPENSE TRACKER RIGHT NOW - no other way works both on local machine and on firebase

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,8 +1,8 @@
 @import '../../sass/variables';
 
-:export {
-  javascript: $javascript;
-}
+// :export {
+//   javascript: $javascript;
+// }
 
 // //
 // //------------------------------------
@@ -73,20 +73,6 @@
     background: rgba(255, 255, 255, 0.9);
     border-radius: 15px;
     // margin: 20px 0;
-    // IPad[PORTFOLIO]
-    @media (min-width: $ipad-min-width) and (max-width: $ipad-max-width) {
-      margin: 22vh auto;
-      overflow-y: scroll;
-    }
-
-    // IPad Pro[PORTFOLIO]
-    @media (min-width: $ipad-pro-min-width) and (max-width: $ipad-pro-max-width) {
-    }
-
-    //Desktop-widescreen[PORTFOLIO]
-    @media (min-width: $desktop-min-width) {
-      margin: 20vh auto;
-    }
 
     article {
       // background: rgba(255, 255, 255, 0.9);
@@ -103,29 +89,6 @@
       border-radius: 10px;
       box-shadow: 0 5px 8px 0 rgba(255, 255, 255, 0.3), 0 7px 20px 0 rgba(255, 255, 255, 0.3);
       // background: purple;
-      // IPad[PORTFOLIO]
-      @media (min-width: $ipad-min-width) and (max-width: $ipad-max-width) {
-        height: 100%;
-        // background: red;
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-      }
-
-      // IPad Pro[PORTFOLIO]
-      @media (min-width: $ipad-pro-min-width) and (max-width: $ipad-pro-max-width) {
-        height: 100%;
-        // background: red;
-        display: grid !important;
-        grid-template-columns: 1fr 3fr !important;
-      }
-
-      //Desktop-widescreen[PORTFOLIO]
-      @media (min-width: $desktop-min-width) {
-        height: 100%;
-        // background: red;
-        display: grid !important;
-        grid-template-columns: 1fr 3fr !important;
-      }
 
       .column1 {
         // background: rgba(255, 255, 255, 0.9);
@@ -152,8 +115,14 @@
             justify-content: center;
             // height: 100px;
 
+            // .player-wrapper {
+            //   border-radius: 50px;
+            //   overflow: hidden;
+            // }
+
             .image {
               width: 100%;
+
               // min-height: 90px;
               // max-height: 150px;
               // min-width: 10px;
@@ -161,7 +130,7 @@
               border-radius: 15px;
               cursor: pointer;
               // o: $linear-grad;
-              filter: brightness(50%);
+              // filter: brightness(50%);
               box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 1);
               // border: 1px solid rgba($github, 0.1);
 
@@ -405,6 +374,105 @@
               }
             }
           }
+        }
+      }
+    }
+  }
+
+  // LANDSCAPE FORMATS
+  @media (orientation: landscape) {
+    @media (max-width: $iphone6-width-landscape) {
+    }
+
+    @media (max-width: $iphoneX-width-landscape) {
+    }
+
+    @media (min-width: 813px) and (max-width: $ipad-width-landscape) {
+      .modalContent {
+        margin: 22vh auto;
+        overflow-y: scroll;
+
+        article {
+          height: 100%;
+          // background: red;
+          display: grid;
+          grid-template-columns: 1.5fr 1fr;
+        }
+      }
+    }
+
+    @media (min-width: 1025px) and (max-width: $ipad-pro-width-landscape) {
+      .modalContent {
+        margin: 22vh auto;
+        overflow-y: scroll;
+
+        article {
+          height: 100%;
+          // background: red;
+          display: grid;
+          grid-template-columns: 1.5fr 1fr;
+        }
+      }
+    }
+
+    @media (min-width: $desktop-min-width) {
+      .modalContent {
+        margin: 22vh auto;
+        overflow-y: scroll;
+
+        article {
+          height: 100%;
+          // background: red;
+          display: grid;
+          grid-template-columns: 1.5fr 1fr;
+        }
+      }
+    }
+  }
+
+  // PORTRAIT FORMATS
+  @media (orientation: portrait) {
+    // Ipad
+    @media (min-width: $ipad-min-width) and (max-width: $ipad-max-width) {
+      .modalContent {
+        margin: 22vh auto;
+        overflow-y: scroll;
+
+        article {
+          height: 100%;
+          // background: red;
+          display: grid;
+          grid-template-columns: 1.5fr 1fr;
+        }
+      }
+    }
+
+    // Ipad Pro
+    @media (min-width: $ipad-pro-min-width) and (max-width: $ipad-pro-max-width) {
+      .modalContent {
+        margin: 22vh auto;
+        overflow-y: scroll;
+
+        article {
+          height: 100%;
+          // background: red;
+          display: grid;
+          grid-template-columns: 1.5fr 1fr;
+        }
+      }
+    }
+
+    // Desktop
+    @media (min-width: $desktop-min-width) {
+      .modalContent {
+        margin: 22vh auto;
+        overflow-y: scroll;
+
+        article {
+          height: 100%;
+          // background: red;
+          display: grid;
+          grid-template-columns: 1.5fr 1fr;
         }
       }
     }
